update khatru, evenstore, badger

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,14 @@
     <!-- Footer -->
     <footer class="text-center py-6 bg-gray-800 w-full">
       <p class="text-lg text-gray-400">
-        Proudly powered by
+        Built with love by
+        <a
+          href="https://bitvora.com"
+          target="_blank"
+          class="text-purple-300 hover:text-purple-400 underline"
+          >Bitvora</a
+        >
+        and Proudly powered by
         <a
           href="https://khatru.nostr.technology/"
           target="_blank"
